--- a/views/login.ejs
+++ b/views/login.ejs
@@ -27,92 +27,57 @@
     <style>
         @import url("https://use.typekit.net/foj0sle.css");
     </style>
-    <style media="screen">
+ 
+   
+   <script type="text/javascript">
+    $(document).ready(function() {
+        // Get CSRF token from meta tag or hidden input
+        let csrfToken = $('meta[name="csrf-token"]').attr('content');
 
-    </style>
-    <script type="text/javascript">
-        $(document).ready(function() {
-            if ($("#email").val().length > 0) {
-                $("#checkemail").hide();
+        $("#login").click(function(e) {
+            e.preventDefault();
 
+            let data = {
+                email: $("#email").val(),
+                password: $("#password").val(),
+                _csrf: csrfToken // Include CSRF token
+            };
 
+            if ($("#email").val().length == 0) {
+                $("#checkemail").show();
             }
-            if ($("#password").val().length > 0) {
+            if ($("#password").val().length == 0) {
+                $("#checkpass").show();
+            }
+
+            if ($("#email").val().length > 0 && $("#password").val().length > 0) {
+                $("#checkemail").hide();
                 $("#checkpass").hide();
 
-
-
-            }
-            $("#login").click(function(e) {
-                console.log('askdisadasinm');
-                e.preventDefault();
-
-                let data = {};
-                data.email = $("#email").val();
-                data.password = $("#password").val();
-
-                if ($("#email").val().length == 0) {
-                    // console.log("empty email");
-                    $("#checkemail").show();
-
-
-                }
-                if ($("#password").val().length == 0) {
-                    // console.log("empty password");
-                    $("#checkpass").show();
-
-
-                }
-
-                if ($("#email").val().length > 0 && $("#password").val().length > 0) {
-                    $("#checkemail").hide();
-                    $("#checkemail").hide();
-
-
-                    $.ajax({
-                        type: 'POST',
-                        data: data,
-                        url: '/login',
-                        success: function(data) {
-
-
-                         
-
-                            window.location.href = "/dashboard";
-
-                        
-                        },
-                        error: function(XMLHttpRequest, textStatus, errorThrown) {
-                            // alert(textStatus + errorThrown);
-                            let x = JSON.parse(XMLHttpRequest.responseText);
-                            let urlexists = x.error;
-                            console.log(urlexists);
-
-                            senderror(urlexists);
-                        }
-                    });
-
-                    function senderror(urlexists, urlavailable) {
-                        console.log(urlexists);
-                        if (urlexists === "invalid credentials") {
-                            // console.log("show cross mark");
-                            $('#verifyemail').show();
-                            $('#verifypass').show();
-
-
-
-                        }
+                $.ajax({
+                    type: 'POST',
+                    data: data,
+                    url: '/login',
+                    success: function(data) {
+                        window.location.href = "/dashboard";
+                    },
+                    error: function(XMLHttpRequest, textStatus, errorThrown) {
+                        let x = JSON.parse(XMLHttpRequest.responseText);
+                        let urlexists = x.error;
+                        senderror(urlexists);
                     }
+                });
 
-
-
+                function senderror(urlexists) {
+                    if (urlexists === "invalid credentials") {
+                        $('#verifyemail').show();
+                        $('#verifypass').show();
+                    }
                 }
-
-            });
-
+            }
         });
-    </script>
-
+    });
+</script>
 
 </head>
 
